<resources>
    <string name="app_name">koti</string>
    <string name="default_web_client_id">759374855220-d2p49vcltrgcq27ol0bdut8ohv7oo8j5.apps.googleusercontent.com</string>

    <string name="welcome_text_prime">Online Home Store\nand Furniture</string>
    <string name="welcome_text_secondary">Discover all style and budgets of\nfurniture, appliances, kitchen, and more\nfrom 500+ brands in your hand.</string>
    <string name="start_button_text">Get Started</string>
    <string name="login_title">Welcome Back!</string>
    <string name="email_hint">Email</string>
    <string name="pass_hint">Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="login">Log In</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="facebook_authentication_button_img_desc">facebook authentication</string>
    <string name="google_authentication_button_img_desc">google authentication</string>
    <string name="sign_up_text_button">Sign Up</string>
    <string name="register_title">Create Account</string>
    <string name="button_create_account">REGISTER</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="button_login">LOGIN</string>
    <string name="forgot_password_reset">Forgot password?</string>
    <string name="reset_pass_hint">We will send you a message to set or reset\nyour new password</string>
    <string name="home_menu">Home</string>
    <string name="home_search">Search</string>
    <string name="home_cart">Cart</string>
    <string name="home_profile">Profile</string>
    <string name="home_search_now">Search Now</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="special_price">$1600</string>
    <string name="see_product">See product</string>
    <string name="discount_price">$1600.00</string>
    <string name="discount_price_old">$2000.00</string>
    <string name="discount_item">Scotch Premium</string>
    <string name="product_name">Chair</string>
    <string name="best_deals">Best deals</string>
    <string name="best_products">Best products</string>
    <string name="product_name_sample">Awesome product</string>
    <string name="product_price_sample">$230.00</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="add_to_cart_button">ADD</string>
    <string name="size_demo">L</string>
    <string name="your_shopping_cart_is_empty">Cart empty</string>
    <string name="support_virtual_payments">Koti dose not support virtual payments. You can pay when you receive your order.</string>
    <string name="prodduct_name_sample">CHAIR</string>
    <string name="product_rating_sample">0.0 (0)</string>
    <string name="product_desc_sample">Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of \"de Finibus Bonorum et Malorum\" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, \"Lorem ipsum dolor sit amet..\", comes from a line in section 1.10.32.</string>
    <string name="have_an_account">Have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="reset_link_sent">Reset link was sent to your Email</string>
    <string name="success">Success</string>
    <string name="cart_product_quantity_sample">1</string>
    <string name="cart_total_label">Total:</string>
    <string name="cart_price_label">$150</string>
    <string name="price_small_title">Price:</string>
    <string name="cont_desc_button_add_to_bookmark">Add product to favorite button</string>
    <string name="button_back">Back</string>
    <string name="cont_desc_button_get_back">Button get back</string>
    <string name="your_favs_is_empty">You don\'t have any favorite products yet</string>

    <string name="cont_desc_null" />
    <string name="login_text">Enter your email to start shopping and get awesome deals today!</string>
    <string name="log_in_with_facebook">Log In with Facebook</string>
    <string name="log_in_with_google">Log In with Google</string>
    <string name="or">OR</string>
    <string name="button_register">Register</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="register_text">Fill in your details below to get started on a seamless shopping experience.</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="log_in_redirect">Log In</string>
    <string name="have_an_account_text">Have an Account?</string>
    <string name="email_null">Email field can\'t be empty</string>
    <string name="pass_null">Password field can\'t be empty</string>
    <string name="cancel_reset_pass">Cancel</string>
    <string name="send_pass_reset">SEND</string>
    <string name="tv_home_image_title">Build The Kitchen Of Your Dreams!</string>
    <string name="tv_home_image_subtitle">Get discounts up to 75% for kitchen sets and cupboards</string>
    <string name="button_shop_now">Shop Now</string>
    <string name="discount_sample">45% OFF</string>
    <string name="home_favorites">Favorites</string>
    <string name="empty_cart_text">Your cart is empty.\nStart adding items to enjoy shopping!</string>
    <string name="no_favorites">No favorites</string>
    <string name="empty_favs_text">You have nothing on your list yet.\nIt\'s never too late to change it!</string>
    <string name="order_help_text">If you have any problems with your order, call us at 1-xxx-xxx-xxxx</string>
    <string name="collection_user">user</string>
    <string name="toast_reset_link">Reset link was sent to your email</string>
    <string name="no_orders">No orders</string>
    <string name="no_addresses">No saved addresses</string>
    <string name="empty_orders_text">You have not placed an order yet.\nAdd items to your cart and checkout\nwhen you are ready!</string>
    <string name="empty_addresses_text">You have not added any addresses yet.\nYou can do it by clicking button\nat the top of this page!</string>
    <string name="toast_clear_cache">All app cache was successfully removed from your device!</string>
    <string name="search_result_sample">Results for: \'chair\'</string>
</resources>