<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLoginStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLoginEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/tvRegisterTitle"
        style="@style/titleInterWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tvLoginTitleTopMargin"
        android:text="@string/register_title"
        app:layout_constraintStart_toStartOf="@id/guidelineLoginStart"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailFieldRegistration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edLoginMargin"
        android:hint="@string/email_hint"
        app:endIconMode="clear_text"
        app:hintTextAppearance="@style/editText"
        app:layout_constraintEnd_toStartOf="@id/guidelineLoginEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineLoginStart"
        app:layout_constraintTop_toBottomOf="@id/tvRegisterTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edEmailRegistration"
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/edPaddingUser"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/edRegistrationStartPadding"
            android:paddingEnd="0dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passFieldRegistration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edLoginMargin"
        android:hint="@string/pass_hint"
        app:endIconMode="password_toggle"
        app:hintTextAppearance="@style/editText"
        app:layout_constraintEnd_toStartOf="@id/guidelineLoginEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineLoginStart"
        app:layout_constraintTop_toBottomOf="@id/emailFieldRegistration">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edPassRegistration"
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:paddingStart="@dimen/edRegistrationStartPadding"
            android:paddingEnd="0dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passFieldRegistrationConfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edLoginMargin"
        android:hint="@string/confirm_password_hint"
        app:endIconMode="password_toggle"
        app:hintTextAppearance="@style/editText"
        app:layout_constraintEnd_toStartOf="@id/guidelineLoginEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineLoginStart"
        app:layout_constraintTop_toBottomOf="@id/passFieldRegistration">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edPassRegistrationConfirm"
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/edPadding"
            android:inputType="textPassword"
            android:paddingStart="@dimen/edRegistrationStartPadding"
            android:paddingEnd="0dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/buttonRegister"
        style="@style/orangeButtonStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/smallButtonHeight"
        android:layout_marginTop="@dimen/buttonRegisterTopMargin"
        android:text="@string/button_create_account"
        app:layout_constraintEnd_toEndOf="@id/guidelineLoginEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineLoginStart"
        app:layout_constraintTop_toBottomOf="@id/passFieldRegistrationConfirm"
        app:spinning_bar_color="@color/md_theme_light_background" />

    <TextView
        android:id="@+id/tvContinueWith"
        style="@style/textInterWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tvContinueWithTopMargin"
        android:text="@string/or_continue_with"
        app:layout_constraintEnd_toEndOf="@id/guidelineLoginEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineLoginStart"
        app:layout_constraintTop_toBottomOf="@id/buttonRedirectToAuth" />

    <ImageButton
        android:id="@+id/facebookRegister"
        style="@style/roundButtonStyle"
        android:layout_width="@dimen/serviceButtonDiameter"
        android:layout_height="@dimen/serviceButtonDiameter"
        android:layout_marginTop="@dimen/auth_services_top_margin"
        android:layout_marginEnd="@dimen/imgCenterMargin"
        android:contentDescription="@string/facebook_authentication_button_img_desc"
        android:padding="@dimen/facebook_logo_padding"
        android:src="@drawable/ic_facebook"
        app:layout_constraintEnd_toStartOf="@id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@id/tvContinueWith" />

    <ImageButton
        android:id="@+id/googleRegister"
        style="@style/roundButtonStyle"
        android:layout_width="@dimen/serviceButtonDiameter"
        android:layout_height="@dimen/serviceButtonDiameter"
        android:layout_marginStart="@dimen/imgCenterMargin"
        android:layout_marginTop="@dimen/auth_services_top_margin"
        android:contentDescription="@string/google_authentication_button_img_desc"
        android:padding="@dimen/google_icon_padding"
        android:scaleType="fitCenter"
        android:src="@drawable/google"
        app:layout_constraintStart_toEndOf="@id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@id/tvContinueWith" />

    <TextView
        android:id="@+id/tvHaveAccount"
        style="@style/textInterWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tvHaveAccountTopMargin"
        android:text="@string/have_an_account"
        app:layout_constraintEnd_toEndOf="@id/guidelineLoginEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineLoginStart"
        app:layout_constraintTop_toBottomOf="@id/buttonRegister" />

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/buttonRedirectToAuth"
        style="@style/whiteButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tvSignUpTopMargin"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/button_login"
        app:layout_constraintEnd_toEndOf="@id/guidelineLoginEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineLoginStart"
        app:layout_constraintTop_toBottomOf="@id/tvHaveAccount"
        tools:ignore="TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>