<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white_icon_background">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/resetPassGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/resetPassGuidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />

    <TextView
        android:id="@+id/tvForgotPassDialog"
        style="@style/subtitleInterGrey"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialogElementsTopMargin"
        android:text="@string/forgot_password_reset"
        app:layout_constraintStart_toStartOf="@id/resetPassGuideline"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvForgotPassSecondary"
        style="@style/textInterBlack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialogElementsTopMargin"
        android:textColor="@color/grey"
        android:text="@string/reset_pass_hint"
        app:layout_constraintStart_toStartOf="@id/resetPassGuideline"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPassDialog"
        app:layout_constraintEnd_toEndOf="@id/tvForgotPassDialog"/>

    <EditText
        android:id="@+id/edEmailReset"
        style="@style/textInterBlack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialogElementsTopMargin"
        android:autofillHints="emailAddress"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@id/resetPassGuidelineEnd"
        app:layout_constraintStart_toStartOf="@id/resetPassGuideline"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPassSecondary" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dialogBottomScreenMargin"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/edEmailReset"
        app:layout_constraintStart_toStartOf="@id/resetPassGuideline"
        app:layout_constraintEnd_toEndOf="@id/resetPassGuidelineEnd"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonCancelPassReset"
            style="@style/whiteButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/imgCenterMargin"
            android:layout_weight="1"
            android:text="@string/cancel_reset_pass" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSendResetPass"
            style="@style/orangeButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/imgCenterMargin"
            android:layout_weight="1"
            android:text="@string/send_pass_reset" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>